add test case to verify config change to disjoint voter set